Rick: Added local session caching &c Basic Quiz: * Session values are stored permanently for basic quiz on each individual device you own. A reset button is provided should you wish to reset the session values to 0. * Next Question button greys out and is deactivated when next question is being fetched. * Weird increments to session values when connection is lost should no longer occur. Now if there has been no connection, the quiz will wait 3 seconds and try to send again, without changing any values. I'll be testing this myself more extensively once the update goes in. * Gap between question and the answer box has been halved. This should help with overall visibility on small mobile devices. * I found that when running through quiz at speed that I would make mistakes - thinking I was done / not done. I Experimented with changing the background of the alphagram instead of the text colour. This made an immediate difference, so I kept it. This may not be for everyone and if it's disliked enough, I'll consider alternatives. Sloth: * Function added to check for milestones reached on questions answered. Uses the same function as basic quiz, so not anticipating any problems.

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,27 @@ margin:3px;display:inline-block;font-weight:lighter;
   background: -moz-radial-gradient(#6cf 15%, #9cc,#ddd); 
   background: radial-gradient(#6cf 15%,  #9cc, #ddd);
 }
+button:disabled {float:left;
+  background:#68a;
+  background: -webkit-radial-gradient(#68a 15%, #999, #aaa);
+  background: -o-radial-gradient(#68a 15%, #999,#aaa); 
+  background: -moz-radial-gradient(#68a 15%, #999,#aaa); 
+  background: radial-gradient(#68a 15%,  #999, #aaa);
+}
 .quizButton:hover {box-shadow: 0px 0px 5px #222;}
+
+.alphaCorrect { 
+  background: -webkit-radial-gradient(#3c3 15%, #9c9, #ddd);
+  background: -o-radial-gradient(#3c3 15%,#9c9, #ddd); 
+  background: -moz-radial-gradient(#3c3 15%, #9c9, #ddd); 
+  background: radial-gradient(#3c3 15%, #9c9, #ddd);}
+.alphaIncorrect {
+  background: #d33;
+  background: -webkit-radial-gradient(#d33 15%,#c66,#ddd);
+  background: -o-radial-gradient(#d33 15%,#c66,#ddd); 
+  background: -moz-radial-gradient(#d33 15%,#c66,#ddd); 
+  background: radial-gradient(#d33 %15,#c66,#ddd);
+}
 
 /* Leaderboard / Cardbox specific classes */
 
@@ -98,19 +118,20 @@ border-radius: 5px;
 
 .quizSessionTable {width:100%;margin-bottom:20px;}
 .quizSessionTable Table {min-width:99.5%;width:99.5%;margin:auto;text-align:center;}
-.quizSessionTable th {text-align:center;font-size:0.9em;font-variant:small-caps;border-top:1px solid #ccc;border-bottom:1px solid #ccc;background-image: url('b42.png');background-repeat: repeat;}
+.quizSessionTable th {text-align:center;font-size:0.9em;font-variant:small-caps;border-top:1px solid #ccc;border-bottom:1px solid #ccc;background-image: url('b42.png');/**background: #67c8ff**/; background-repeat: repeat;}
 .quizSessionTable tr:last-child {background-color:#f0f0f0;background: url('b34.png') repeat;text-align:center;font-size:1.1em;border-bottom:1px solid #ccc;color:#000;font-variant:small-caps;}
 .quizSessionTableHCardbox {width:14%;}
 .quizSessionTableHDue {width:36%;text-align:left;}
 .quizSessionTableHQuestion {width:14%;}
 .quizSessionTableHCorrect {width:18%;}
 .quizSessionTableHScore {width:18%;}
-.quizAlphaSuper {width:100%;text-align:center;margin-top:1.5em;margin-bottom:5em;display:inline-block;border-bottom:1px solid #ccc;border-top:1px solid #ccc;
-  border:1px solid #847c6a;
+.quizAlphaSuper {width:100%;text-align:center;margin-top:1.5em;margin-bottom:2.5em;display:inline-block;border-bottom:1px solid #ccc;border-top:1px solid #ccc;
+  border:1px solid #a98;
   -webkit-border-radius: 10px;
 -moz-border-radius: 10px;
 border-radius: 10px;
 background-image: url('b42.png');background-repeat: repeat;
+box-shadow: -1px -1px 3px #000;
 }
 .quizAlphaContain {background: inherit;margin:0 auto;text-align:center;display:table;}
 .quizAlpha {background:inherit;font-size:2.8em;text-align:center;padding-left:10px;padding-right:10px;display: table-cell;vertical-align:top;line-height:1.5em;}
@@ -130,7 +151,7 @@ background-image: url('b42.png');background-repeat: repeat;
 .wordTable tr {border-bottom: 1px solid #ccc;}
 .wordTableHighlight {background-color: hsla(0,0%,95%,0.7);background: url('b34.png') repeat;}
 .wordTableHighlightWrong {background-color: #CCCCCC;}
-.wordTableLeftHook , .wordTableLeftHook {font-size:1em;font-variant:small-caps;}
+.wordTableLeftHook , .wordTableRightHook {font-size:1em;font-variant:small-caps;}
 .wordTableLeftHook {padding-right:5px;text-align:right;}
 .wordTableRightHook {padding-left:5px;text-align:left;}
 .wordTableWord {font-weight:bold;padding:0px;text-align:center;margin:0px;width:5%;color:#404040;}
